// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GlobalNotification /> renders the informative notification correctly 1`] = `
<div
  class="notification informative global hidden"
  data-automation-class="generic-notification informative global"
  style="margin-top: 0px;"
>
  <div
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="icon inheritSize"
      focusable="false"
      role="presentation"
    >
      <use
        xlink:href="#undefined"
      />
    </svg>
  </div>
  <div
    class="textContainer"
  >
    <div
      class="text"
    >
      This is my 
      <em>
        informational
      </em>
       notification
    </div>
  </div>
  <button
    class="cancel"
    data-testid="close-button"
    type="button"
  >
    <svg
      class="icon"
      focusable="false"
      role="img"
    >
      <title>
        close notification
      </title>
      <use
        xlink:href="#undefined"
      />
    </svg>
  </button>
</div>
`;

exports[`<GlobalNotification /> renders the positive notification correctly 1`] = `
<div
  class="notification positive global hidden"
  data-automation-class="generic-notification positive global"
  style="margin-top: 0px;"
>
  <div
    class="icon"
  >
    <svg
      aria-hidden="true"
      class="icon inheritSize"
      focusable="false"
      role="presentation"
    >
      <use
        xlink:href="#undefined"
      />
    </svg>
  </div>
  <div
    class="textContainer"
  >
    <div
      class="text"
    >
      This is my positive notification
    </div>
  </div>
  <button
    class="cancel"
    data-testid="close-button"
    type="button"
  >
    <svg
      class="icon"
      focusable="false"
      role="img"
    >
      <title>
        close notification
      </title>
      <use
        xlink:href="#undefined"
      />
    </svg>
  </button>
</div>
`;
